--- a/.storybook/manager-head.html
+++ b/.storybook/manager-head.html
@@ -4,14 +4,14 @@
   }
 </style>
 
-<title>Robel Ephrem</title>
+<title>Naomi Getachew | Software Developer</title>
 <meta
   name="description"
   content="My custom design component system created from the ground up used in building my portfolio"
 />
 
 <meta name="theme-color" content="#111111" />
-<meta name="author" content="Robel Ephrem" />
+<meta name="author" content="Naomi Getachew" />
 
 <link rel="shortcut icon" href="/favicon.svg" />
 <link rel="apple-touch-icon" href="/icon-256.png" />
@@ -23,7 +23,7 @@
 <meta property="og:image:height" content="675" />
 <meta property="og:image:alt" content="Banner for the site" />
 
-<meta property="og:title" content="Robel Ephrem " />
+<meta property="og:title" content="Hamish Williams | Storybook" />
 <meta property="og:site_name" content="hamishw.com" />
 <meta property="og:url" content="https://storybook.hamishw.com" />
 <meta
@@ -36,6 +36,6 @@
   name="twitter:description"
   content="My custom design component system created from the ground up used in building my portfolio"
 />
-<meta name="twitter:title" content="Robel Ephrem | Storybook" />
+<meta name="twitter:title" content="Hamish Williams | Storybook" />
 <meta name="twitter:site" content="@hamishMW" />
 <meta name="twitter:image" content="https://hamishw.com/social-image.png" />
